# Make-reading-great-again

./: audiogen.py  imagesearch.py  installs.txt  main.py  mydoc.txt  pagegenerator.py  pyproject.toml  websearch.py
book_home/: index_1579395659.html  index_1579397804.html  index_1579398095.html  index_1579399396.html  index_1581210692.html  index_1583024401.html  index_1583025783.html  index_1583027363.html  index_1583028867.html  index_1583029009.html  index_1583029244.html  index_1583030244.html  index_1583030733.html  index_1583030784.html  index_1585435526.html
static/: script.js  style.css
templates/: index.html
